Add support for deadsnakes.

--- a/{{ cookiecutter.formal_name }}/Dockerfile
+++ b/{{ cookiecutter.formal_name }}/Dockerfile
@@ -7,14 +7,25 @@ WORKDIR /app
 ENV DEBIAN_FRONTEND="noninteractive" \
 # Disable pip warnings about running as root (pip >= 22.1)
     PIP_ROOT_USER_ACTION="ignore"
+{% if cookiecutter.python_source == "deadsnakes" %}
+# Install the deadsnakes PPA so we can get arbitrary Python versions
+RUN apt-get update -y && \
+    apt-get install --no-install-recommends -y software-properties-common && \
+    apt-add-repository ppa:deadsnakes/ppa
 
-# Install packages needed to build DEB files, plus Python
+# Install Python from deadsnakes
+RUN apt-get update -y && \
+    apt-get install --no-install-recommends -y \
+        python{{ cookiecutter.python_version|py_tag }}-dev \
+        python{{ cookiecutter.python_version|py_tag }}-venv
+{% elif cookiecutter.python_source == "system" %}
+# Install System python
 RUN apt-get update -y && \
     apt-get install --no-install-recommends -y \
         python{{ cookiecutter.python_version|py_tag }}-dev \
         python{{ cookiecutter.python_version|py_tag }}-venv \
         python{{ cookiecutter.python_version|py_tag }}-pip
-
+{% endif %}
 # Ensure Docker user UID:GID matches host user UID:GID (beeware/briefcase#403)
 # Use --non-unique to avoid problems when the UID:GID of the host user
 # collides with entries provided by the Docker container.
@@ -31,6 +42,12 @@ RUN apt-get install --no-install-recommends -y ${SYSTEM_REQUIRES}
 
 # Use the brutus user for operations in the container
 USER brutus
+
+{% if cookiecutter.python_source == "deadsnakes" %}
+# Ensure pip is available; do this as the brutus user
+# to ensure that the pip cache is created user-readable.
+RUN python{{ cookiecutter.python_version|py_tag }} -m ensurepip
+{% endif %}
 
 # ========== START USER PROVIDED CONTENT ==========
 {{ cookiecutter.dockerfile_extra_content }}
